# rinha-2024-q1

./: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  haproxy.cfg
db/: Dockerfile  init.sql  setup.sh
load-test/: Dockerfile  run_tests.sh
src/: main.rs  routes.rs  state.rs
src/config/: app_config.rs
src/config/env/: defaults.yml  docker.yml  local.yml
src/domain/: mod.rs
src/domain/client/: model.rs  service.rs
src/domain/statement/: api.rs  mod.rs  model.rs  service.rs
src/domain/transaction/: api.rs  model.rs  service.rs
src/tools/: axum.rs  db.rs  error.rs  json.rs  locker.rs  metrics.rs  mod.rs
