[package]
name = "rinha-2024-q1"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "signal", "process", "fs"] }
axum = { version = "0.7.4", features = ["macros"] }
config = "0.14.0"
derive-new = "0.6.0"
libsql = { git = "https://github.com/tursodatabase/libsql.git", branch = "main", features = ["remote"], default-features = false }
validify = "1.3.0"
thiserror = "1.0.56"
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
time = { version = "0.3.34", features = ["serde", "serde-human-readable", "macros"] }
sea-query = "0.30.7"
redlock = { version = "2.0.0", features = ["async"] }
humantime = "2.1.0"
tower-http = { version = "0.5.1", features = ["catch-panic"] }
redis = "0.23.3"